Project code support (#4636)
* Support image uploads in the "notes" markdown fields

- Implemented using the existing EasyMDE library
- Copy / paste support
- Drag / drop support

* Remove debug message

* Updated API version

* Better UX when saving notes

* Pin PIP version (for testing)

* Bug fixes

- Fix typo
- Use correct serializer type

* Add unit testing

* Update role permissions

* Typo fix

* Update migration file

* Adds a notes mixin class to be used for refactoring

* Refactor existing models with notes to use the new mixin

* Add helper function for finding all model types with a certain mixin

* Refactor barcode plugin to use new method

* Typo fix

* Add daily task to delete old / unused notes

* Add ProjectCode model

(cherry picked from commit 382a0a2fc32c930d46ed3fe0c6d2cae654c2209d)

* Adds IsStaffOrReadyOnly permissions

- Authenticated users get read-only access
- Staff users get read/write access

(cherry picked from commit 53d04da86c4c866fd9c909d147d93844186470b4)

* Adds API endpoints for project codes

(cherry picked from commit 5ae1da23b2eae4e1168bc6fe28a3544dedc4a1b4)

* Add migration file for projectcode model

(cherry picked from commit 5f8717712c65df853ea69907d33e185fd91df7ee)

* Add project code configuration page to the global settings view

* Add 'project code' field to orders

* Add ability to set / edit the project code for various order models

* Add project code info to order list tables

* Add configuration options for project code integration

* Allow orders to be filtered by project code

* Refactor table_filters.js

- Allow orders to be filtered dynamically by project code

* Bump API version

* Fixes

* Add resource mixin for exporting project code in order list

* Add "has_project_code" filter

* javascript fix

* Edit / delete project codes via API

- Also refactor some existing JS

* Move MetadataMixin to InvenTree.models

To preve

--- a/InvenTree/templates/InvenTree/settings/settings_staff_js.html
+++ b/InvenTree/templates/InvenTree/settings/settings_staff_js.html
@@ -52,6 +52,78 @@ onPanelLoad('pricing', function() {
     });
 });
 
+// Javascript for project codes panel
+onPanelLoad('project-codes', function() {
+
+    // Construct the project code table
+    $('#project-code-table').bootstrapTable({
+        url: '{% url "api-project-code-list" %}',
+        search: true,
+        sortable: true,
+        formatNoMatches: function() {
+            return '{% trans "No project codes found" %}';
+        },
+        columns: [
+            {
+                field: 'code',
+                sortable: true,
+                title: '{% trans "Project Code" %}',
+            },
+            {
+                field: 'description',
+                sortable: false,
+                title: '{% trans "Description" %}',
+                formatter: function(value, row) {
+                    let html = value;
+                    let buttons = '';
+
+                    buttons += makeEditButton('button-project-code-edit', row.pk, '{% trans "Edit Project Code" %}');
+                    buttons += makeDeleteButton('button-project-code-delete', row.pk, '{% trans "Delete Project Code" %}');
+
+                    html += wrapButtons(buttons);
+                    return html;
+                }
+            }
+        ]
+    });
+
+    $('#project-code-table').on('click', '.button-project-code-edit', function() {
+        let pk = $(this).attr('pk');
+
+        constructForm(`{% url "api-project-code-list" %}${pk}/`, {
+            title: '{% trans "Edit Project Code" %}',
+            fields: {
+                code: {},
+                description: {},
+            },
+            refreshTable: '#project-code-table',
+        });
+    });
+
+    $('#project-code-table').on('click', '.button-project-code-delete', function() {
+        let pk = $(this).attr('pk');
+
+        constructForm(`{% url "api-project-code-list" %}${pk}/`, {
+            title: '{% trans "Delete Project Code" %}',
+            method: 'DELETE',
+            refreshTable: '#project-code-table',
+        });
+    });
+
+    $('#new-project-code').click(function() {
+        // Construct a new project code
+        constructForm('{% url "api-project-code-list" %}', {
+            fields: {
+                code: {},
+                description: {},
+            },
+            title: '{% trans "New Project Code" %}',
+            method: 'POST',
+            refreshTable: '#project-code-table',
+        });
+    })
+});
+
 // Javascript for Part Category panel
 onPanelLoad('category', function() {
     $('#category-select').select2({
@@ -136,11 +208,12 @@ onPanelLoad('category', function() {
                 title: '{% trans "Default Value" %}',
                 sortable: 'true',
                 formatter: function(value, row, index, field) {
-                    var bEdit = "<button title='{% trans "Edit Template" %}' class='template-edit btn btn-outline-secondary' type='button' pk='" + row.pk + "'><span class='fas fa-edit'></span></button>";
-                    var bDel = "<button title='{% trans "Delete Template" %}' class='template-delete btn btn-outline-secondary' type='button' pk='" + row.pk + "'><span class='fas fa-trash-alt icon-red'></span></button>";
+                    let buttons = '';
+                    buttons += makeEditButton('template-edit', row.pk, '{% trans "Edit Template" %}');
+                    buttons += makeDeleteButton('template-delete', row.pk, '{% trans "Delete Template" %}');
 
-                    var html = value
-                    html += "<div class='btn-group float-right' role='group'>" + bEdit + bDel + "</div>";
+                    let html = value
+                    html += wrapButtons(buttons);
 
                     return html;
                 }
@@ -154,6 +227,7 @@ onPanelLoad('category', function() {
         var pk = $(this).attr('pk');
 
         constructForm(`/api/part/category/parameters/${pk}/`, {
+            title: '{% trans "Edit Category Parameter Template" %}',
             fields: {
                 parameter_template: {},
                 category: {
