Add clipboard to tables and external link changes
* Clipboard icon added to tables for screens >1200px wide. Enables
  copying of SKU/MPN/IPN from table cells where these otherwise are
  hyperlinks

* External links now open in new tabs with noreferrer

--- a/InvenTree/InvenTree/static/css/inventree.css
+++ b/InvenTree/InvenTree/static/css/inventree.css
@@ -1095,3 +1095,9 @@ a {
     width:  100%;
     text-align: left;
 }
+
+.flex-cell {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
