--- a/InvenTree/part/templates/part/part_base.html
+++ b/InvenTree/part/templates/part/part_base.html
@@ -383,7 +383,7 @@
                 <tr>
                     <td><span class='fas fa-link'></span></td>
                     <td>{% trans "External Link" %}</td>
-                    <td><a href="{{ part.link }}">{{ part.link }}</a>{% include "clip.html"%}</td>
+                    <td><a href="{{ part.link }}" rel="noreferrer" target="_blank">{{ part.link }}</a>{% include "clip.html"%}</td>
                 </tr>
                 {% endif %}
                 {% if part.responsible %}
