--- a/InvenTree/order/templates/order/sales_order_base.html
+++ b/InvenTree/order/templates/order/sales_order_base.html
@@ -153,6 +153,7 @@ src="{% static 'img/blank_image.png' %}"
         <td>{{ order.customer_reference }}{% include "clip.html"%}</td>
     </tr>
     {% endif %}
+    {% include "currency_data.html" with instance=order %}
     <tr>
         <td><span class='fas fa-tasks'></span></td>
         <td>{% trans "Completed Line Items" %}</td>
