Fix default currency code when adding line items

--- a/InvenTree/order/templates/order/purchase_order_detail.html
+++ b/InvenTree/order/templates/order/purchase_order_detail.html
@@ -180,9 +180,7 @@ $('#new-po-line').click(function() {
     createPurchaseOrderLineItem({{ order.pk }}, {
         {% if order.supplier %}
         supplier: {{ order.supplier.pk }},
-        {% if order.supplier.currency %}
-        currency: '{{ order.supplier.currency }}',
-        {% endif %}
+        currency: '{{ order.currency }}',
         {% endif %}
         onSuccess: function() {
             $('#po-line-table').bootstrapTable('refresh');
@@ -235,9 +233,7 @@ onPanelLoad('order-items', function() {
             order: {{ order.pk }},
             table: '#po-extra-lines-table',
             url: '{% url "api-po-extra-line-list" %}',
-            {% if order.supplier.currency %}
-            currency: '{{ order.supplier.currency }}',
-            {% endif %}
+            currency: '{{ order.currency }}',
         });
     });
 
