Update default order report templates

--- a/InvenTree/report/templates/report/inventree_so_report_base.html
+++ b/InvenTree/report/templates/report/inventree_so_report_base.html
@@ -70,7 +70,7 @@
             <td></td>
             <td></td>
             <th>{% trans "Total" %}</th>
-            <td>{% render_currency order.total_price currency=order.customer.currency %}</td>
+            <td>{% render_currency order.total_price currency=order.currency %}</td>
             <td></td>
         </tr>
     </tbody>
