--- a/InvenTree/report/templates/report/inventree_po_report_base.html
+++ b/InvenTree/report/templates/report/inventree_po_report_base.html
@@ -70,7 +70,7 @@
             <td></td>
             <td></td>
             <th>{% trans "Total" %}</th>
-            <td>{% render_currency order.total_price decimal_places=2 currency=order.supplier.currency %}</td>
+            <td>{% render_currency order.total_price decimal_places=2 currency=order.currency %}</td>
             <td></td>
         </tr>
 
