--- a/InvenTree/templates/InvenTree/settings/user_homepage.html
+++ b/InvenTree/templates/InvenTree/settings/user_homepage.html
@@ -14,6 +14,7 @@
 <div class='row'>
     <table class='table table-striped table-condensed'>
         <tbody>
+            {% include "InvenTree/settings/setting.html" with key="HOMEPAGE_SHOW_INACTIVE" icon='fa-toggle-on' user_setting=True %}
             {% include "InvenTree/settings/setting.html" with key="HOMEPAGE_PART_STARRED" icon='fa-bell' user_setting=True %}
             {% include "InvenTree/settings/setting.html" with key="HOMEPAGE_CATEGORY_STARRED" icon='fa-bell' user_setting=True %}
             {% include "InvenTree/settings/setting.html" with key="HOMEPAGE_PART_LATEST" icon='fa-history' user_setting=True %}
