Display proper printing target name in the label printing modal dialog
Fix #4717

--- a/InvenTree/part/templates/part/part_base.html
+++ b/InvenTree/part/templates/part/part_base.html
@@ -471,6 +471,7 @@
         printLabels({
             items: [{{ part.pk }}],
             key: 'part',
+            singular_name: '{% trans "part" %}',
             url: '{% url "api-part-label-list" %}',
         });
     });
