Fix T003: Endblock should have name

--- a/InvenTree/report/templates/report/inventree_po_report_base.html
+++ b/InvenTree/report/templates/report/inventree_po_report_base.html
@@ -15,7 +15,7 @@
         {% if supplier %}{{ supplier.name }}{% else %}{% trans "Supplier was deleted" %}{% endif %}
     </div>
 
-{% endblock %}
+{% endblock header_content %}
 
 {% block page_content %}
 
@@ -78,4 +78,4 @@
 </table>
 
 
-{% endblock %}
+{% endblock page_content %}
