--- a/InvenTree/label/templates/label/stocklocation/qr_and_text.html
+++ b/InvenTree/label/templates/label/stocklocation/qr_and_text.html
@@ -25,7 +25,7 @@
     top: 2mm;
 }
 
-{% endblock %}
+{% endblock style %}
 
 {% block content %}
 
@@ -35,4 +35,4 @@
     {{ location.name }}
 </div>
 
-{% endblock %}
+{% endblock content %}
