Fix H013: Img tag should have an alt attribute

--- a/InvenTree/label/templates/label/stocklocation/qr_and_text.html
+++ b/InvenTree/label/templates/label/stocklocation/qr_and_text.html
@@ -29,7 +29,7 @@
 
 {% block content %}
 
-<img class='qr' src='{% qrcode qr_data %}'>
+<img class='qr' alt="{% trans 'QR code' %}" src='{% qrcode qr_data %}'>
 
 <div class='loc'>
     {{ location.name }}
