--- a/InvenTree/report/templates/report/inventree_po_report_base.html
+++ b/InvenTree/report/templates/report/inventree_po_report_base.html
@@ -37,7 +37,7 @@
         <tr>
             <td>
                 <div class='thumb-container'>
-                    <img src='{% part_image line.part.part %}' class='part-thumb'>
+                    <img src='{% part_image line.part.part %}' class='part-thumb' alt="{% trans 'Part image' %}">
                 </div>
                 <div class='part-text'>
                     {{ line.part.part.full_name }}
