--- a/InvenTree/templates/navbar.html
+++ b/InvenTree/templates/navbar.html
@@ -14,7 +14,7 @@
 <nav class="navbar {% if sticky %}fixed-top{% endif %} navbar-expand-lg navbar-light">
   <div class="container-fluid">
     <div class="navbar-header clearfix content-heading">
-      <a class="navbar-brand" id='logo' href="{% url 'index' %}" style="padding-top: 7px; padding-bottom: 5px;"><img src="{% inventree_logo %}" width="32" height="32" style="display:block; margin: auto;"/></a>
+      <a class="navbar-brand" id='logo' href="{% url 'index' %}" style="padding-top: 7px; padding-bottom: 5px;"><img src="{% inventree_logo %}" alt="{% trans 'InvenTree logo' %}" width="32" height="32" style="display:block; margin: auto;"/></a>
     </div>
     <div class="navbar-collapse collapse" id="navbar-objects">
       <ul class="navbar-nav">
