--- a/InvenTree/label/templates/label/stockitem/qr.html
+++ b/InvenTree/label/templates/label/stockitem/qr.html
@@ -15,9 +15,9 @@
     {% endlocalize %}
 }
 
-{% endblock %}
+{% endblock style %}
 
 {% block content %}
 
 <img class='qr' src='{% qrcode qr_data %}'>
-{% endblock %}
+{% endblock content %}
