--- a/InvenTree/templates/InvenTree/settings/login.html
+++ b/InvenTree/templates/InvenTree/settings/login.html
@@ -2,12 +2,12 @@
 {% load i18n %}
 {% load inventree_extras %}
 
-{% block label %}login{% endblock %}
+{% block content %}login{% endblock content %}
 
 
 {% block heading %}
 {% trans "Login Settings" %}
-{% endblock %}
+{% endblock heading %}
 
 {% block content %}
 
@@ -41,4 +41,4 @@
     </tbody>
 </table>
 
-{% endblock %}
+{% endblock content %}
