--- a/InvenTree/report/templates/report/inventree_build_order_base.html
+++ b/InvenTree/report/templates/report/inventree_build_order_base.html
@@ -9,7 +9,7 @@
 {% block page_margin %}
 margin: 2cm;
 margin-top: 4cm;
-{% endblock %}
+{% endblock page_margin %}
 
 {% block style %}
 
@@ -71,11 +71,11 @@ margin-top: 4cm;
     border-bottom: 1px solid #555;
 }
 
-{% endblock %}
+{% endblock style %}
 
 {% block bottom_left %}
 content: "v{{report_revision}} - {{ date.isoformat }}";
-{% endblock %}
+{% endblock bottom_left %}
 
 {% block header_content %}
     <img class='logo' src="{% logo_image %}" alt="logo" width="150">
@@ -89,7 +89,7 @@ content: "v{{report_revision}} - {{ date.isoformat }}";
     </div>
 
     <hr>
-{% endblock %}
+{% endblock header_content %}
 
 {% block page_content %}
 
@@ -175,4 +175,4 @@ content: "v{{report_revision}} - {{ date.isoformat }}";
 {{ build.notes|markdownify }}
 {% endif %}
 
-{% endblock %}
+{% endblock page_content %}
