--- a/InvenTree/label/templates/label/part/part_label.html
+++ b/InvenTree/label/templates/label/part/part_label.html
@@ -29,7 +29,7 @@
 
 {% block content %}
 
-<img class='qr' src='{% qrcode qr_data %}'>
+<img class='qr' alt="{% trans 'QC Code' %}" src='{% qrcode qr_data %}'>
 
 <div class='part'>
     {{ part.full_name }}
