--- a/InvenTree/label/templates/label/stocklocation/qr.html
+++ b/InvenTree/label/templates/label/stocklocation/qr.html
@@ -19,5 +19,5 @@
 
 {% block content %}
 
-<img class='qr' src='{% qrcode qr_data %}'>
+<img class='qr' alt="{% trans 'QC Code' %}" src='{% qrcode qr_data %}'>
 {% endblock content %}
