--- a/InvenTree/templates/allauth_2fa/setup.html
+++ b/InvenTree/templates/allauth_2fa/setup.html
@@ -15,7 +15,7 @@
 </p>
 
 <div class="bg-light rounded">
-<img src="{{ qr_code_url }}" class="mx-auto d-block"/>
+<img src="{{ qr_code_url }}" alt="{% trans 'QC Code' %}" class="mx-auto d-block"/>
 </div>
 <br>
 
