--- a/InvenTree/order/templates/order/order_wizard/match_parts.html
+++ b/InvenTree/order/templates/order/order_wizard/match_parts.html
@@ -44,7 +44,7 @@
             </tr>
         </thead>
         <tbody>
-             <tr></tr> {% comment %} Dummy row for javascript del_row method {% endcomment %}
+             <tr>{% comment %} Dummy row for javascript del_row method {% endcomment %}</tr>
             {% for row in rows %}
             <tr {% if row.errors %} style='background: #ffeaea;'{% endif %} part-select='#select_part_{{ row.index }}'>
                 <td>
