Fix T003: Endblock should have name

--- a/InvenTree/order/templates/order/return_orders.html
+++ b/InvenTree/order/templates/order/return_orders.html
@@ -6,14 +6,14 @@
 
 {% block page_title %}
 {% inventree_title %} | {% trans "Return Orders" %}
-{% endblock %}
+{% endblock page_title %}
 
 {% block breadcrumb_list %}
-{% endblock %}
+{% endblock breadcrumb_list %}
 
 {% block heading %}
 {% trans "Return Orders" %}
-{% endblock %}
+{% endblock heading %}
 
 
 {% block actions %}
