--- a/InvenTree/templates/InvenTree/settings/part_stocktake.html
+++ b/InvenTree/templates/InvenTree/settings/part_stocktake.html
@@ -1,11 +1,11 @@
 {% extends "panel.html" %}
 {% load i18n %}
 
-{% block label %}stocktake{% endblock %}
+{% block label %}stocktake{% endblock label %}
 
 {% block heading %}
 {% trans "Stocktake Settings" %}
-{% endblock %}
+{% endblock heading %}
 
 {% block panel_content %}
 
