--- a/InvenTree/company/templates/company/manufacturer_part.html
+++ b/InvenTree/company/templates/company/manufacturer_part.html
@@ -5,7 +5,7 @@
 
 {% block page_title %}
 {% inventree_title %} | {% trans "Manufacturer Part" %}
-{% endblock %}
+{% endblock page_title %}
 
 {% block sidebar %}
 {% include "company/manufacturer_part_sidebar.html" %}
@@ -191,7 +191,7 @@ src="{% static 'img/blank_image.png' %}"
     </div>
 </div>
 
-{% endblock %}
+{% endblock page_content %}
 
 
 {% block js_ready %}
@@ -338,4 +338,4 @@ $('#delete-part').click(function() {
 
 enableSidebar('manufacturerpart');
 
-{% endblock %}
+{% endblock js_ready %}
