--- a/InvenTree/order/templates/order/sales_order_detail.html
+++ b/InvenTree/order/templates/order/sales_order_detail.html
@@ -7,7 +7,7 @@
 
 {% block sidebar %}
 {% include "order/so_sidebar.html"  %}
-{% endblock %}
+{% endblock sidebar %}
 
 {% block page_content %}
 {% settings_value "SALESORDER_EDIT_COMPLETED_ORDERS" as allow_extra_editing %}
@@ -158,7 +158,7 @@
     </div>
 </div>
 
-{% endblock %}
+{% endblock page_content %}
 
 {% block js_ready %}
 {{ block.super }}
@@ -307,4 +307,4 @@
 
     enableSidebar('salesorder');
 
-{% endblock %}
+{% endblock js_ready %}
