--- a/InvenTree/part/templates/part/part_base.html
+++ b/InvenTree/part/templates/part/part_base.html
@@ -6,15 +6,15 @@
 
 {% block sidebar %}
 {% include "part/part_sidebar.html" %}
-{% endblock %}
+{% endblock sidebar %}
 
 {% block thumbnail %}
 {% include "part/part_thumb.html" %}
-{% endblock %}
+{% endblock thumbnail %}
 
 {% block heading %}
 {{ part.full_name }}
-{% endblock %}
+{% endblock heading %}
 
 {% block actions %}
 <!-- Admin View -->
@@ -104,7 +104,7 @@
     </ul>
 </div>
 {% endif %}
-{% endblock %}
+{% endblock actions %}
 
 {% block details %}
 
@@ -693,4 +693,4 @@
         findStockItemBySerialNumber({{ part.pk }});
     });
 
-{% endblock %}
+{% endblock js_ready %}
