--- a/InvenTree/stock/templates/stock/item.html
+++ b/InvenTree/stock/templates/stock/item.html
@@ -7,7 +7,7 @@
 
 {% block sidebar %}
 {% include "stock/stock_sidebar.html" %}
-{% endblock %}
+{% endblock sidebar %}
 
 {% block page_content %}
 
@@ -165,7 +165,7 @@
     </div>
 </div>
 
-{% endblock %}
+{% endblock page_content %}
 
 {% block js_ready %}
 {{ block.super }}
@@ -334,4 +334,4 @@
 
     enableSidebar('stockitem');
 
-{% endblock %}
+{% endblock js_ready %}
