--- a/InvenTree/templates/socialaccount/login.html
+++ b/InvenTree/templates/socialaccount/login.html
@@ -1,7 +1,7 @@
 {% extends "socialaccount/base.html" %}
 {% load i18n %}
 
-{% block head_title %}{% trans "Sign In" %}{% endblock %}
+{% block head_title %}{% trans "Sign In" %}{% endblock head_title %}
 
 {% block content %}
 {% if process == "connect" %}
@@ -25,4 +25,4 @@
         {% trans "Return to login page" %}
     </a>
 </div>
-{% endblock %}
+{% endblock content %}
