--- a/InvenTree/templates/InvenTree/notifications/history.html
+++ b/InvenTree/templates/InvenTree/notifications/history.html
@@ -3,17 +3,17 @@
 {% load i18n %}
 {% load inventree_extras %}
 
-{% block label %}history{% endblock %}
+{% block label %}history{% endblock label %}
 
 {% block heading %}
 {% trans "Notification History" %}
-{% endblock %}
+{% endblock heading %}
 
 {% block actions %}
 <div class='btn btn-danger' type='button' id='history-delete' title='{% trans "Delete Notifications" %}'>
     <span class='fas fa-trash-alt'></span> {% trans "Delete Notifications" %}
 </div>
-{% endblock %}
+{% endblock actions %}
 
 {% block content %}
 
@@ -29,4 +29,4 @@
     </table>
 </div>
 
-{% endblock %}
+{% endblock content %}
