--- a/InvenTree/templates/InvenTree/settings/settings.html
+++ b/InvenTree/templates/InvenTree/settings/settings.html
@@ -6,15 +6,15 @@
 {% load plugin_extras %}
 
 {% block breadcrumb_list %}
-{% endblock %}
+{% endblock breadcrumb_list %}
 
 {% block page_title %}
 {% inventree_title %} | {% trans "Settings" %}
-{% endblock %}
+{% endblock page_title %}
 
 {% block sidebar %}
 {% include "InvenTree/settings/sidebar.html" %}
-{% endblock %}
+{% endblock sidebar %}
 
 {% block content %}
 
@@ -55,11 +55,11 @@
 
 {% endif %}
 
-{% endblock %}
+{% endblock content %}
 
 {% block js_load %}
 {{ block.super }}
-{% endblock %}
+{% endblock js_load %}
 
 {% block js_ready %}
 {{ block.super }}
@@ -78,4 +78,4 @@
 
 enableSidebar('settings');
 
-{% endblock %}
+{% endblock js_ready %}
