--- a/InvenTree/templates/InvenTree/settings/stock.html
+++ b/InvenTree/templates/InvenTree/settings/stock.html
@@ -1,11 +1,11 @@
 {% extends "panel.html" %}
 {% load i18n %}
 
-{% block label %}stock{% endblock %}
+{% block label %}stock{% endblock label %}
 
 {% block heading %}
 {% trans "Stock Settings" %}
-{% endblock %}
+{% endblock heading %}
 
 {% block content %}
 
@@ -24,4 +24,4 @@
 
     </tbody>
 </table>
-{% endblock %}
+{% endblock content %}
