--- a/InvenTree/templates/account/password_reset.html
+++ b/InvenTree/templates/account/password_reset.html
@@ -2,7 +2,7 @@
 
 {% load i18n account crispy_forms_tags inventree_extras %}
 
-{% block head_title %}{% trans "Password Reset" %}{% endblock %}
+{% block head_title %}{% trans "Password Reset" %}{% endblock head_title %}
 
 {% block content %}
 
@@ -27,4 +27,4 @@
         <p>{% trans "This function is currently disabled. Please contact an administrator." %}</p>
     </div>
     {% endif %}
-{% endblock %}
+{% endblock content %}
