--- a/InvenTree/templates/account/password_reset_from_key.html
+++ b/InvenTree/templates/account/password_reset_from_key.html
@@ -1,7 +1,7 @@
 {% extends "account/base.html" %}
 
 {% load i18n crispy_forms_tags %}
-{% block head_title %}{% trans "Change Password" %}{% endblock %}
+{% block head_title %}{% trans "Change Password" %}{% endblock head_title %}
 
 {% block content %}
     <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
@@ -22,4 +22,4 @@
             <p>{% trans 'Your password is now changed.' %}</p>
         {% endif %}
     {% endif %}
-{% endblock %}
+{% endblock content %}
