--- a/docs/_includes/overrides/main.html
+++ b/docs/_includes/overrides/main.html
@@ -3,4 +3,4 @@
 {% block header %}
 {% include "partials/version_banner.html" %}
 {% include "partials/header.html" %}
-{% endblock %}
+{% endblock header %}
