--- a/InvenTree/label/templates/label/part/part_label_code128.html
+++ b/InvenTree/label/templates/label/part/part_label_code128.html
@@ -25,14 +25,14 @@
     top: 2mm;
 }
 
-{% endblock %}
+{% endblock style %}
 
 {% block content %}
 
-<img class='qr' src='{% barcode qr_data %}'>
+<img class='qr' alt='{% trans "QR code" %}' src='{% barcode qr_data %}'>
 
 <div class='part'>
     {{ part.full_name }}
 </div>
 
-{% endblock %}
+{% endblock content %}
