--- a/InvenTree/order/templates/order/sales_order_base.html
+++ b/InvenTree/order/templates/order/sales_order_base.html
@@ -7,12 +7,12 @@
 
 {% block page_title %}
 {% inventree_title %} | {% trans "Sales Order" %}
-{% endblock %}
+{% endblock page_title %}
 
 {% block breadcrumbs %}
 <li class='breadcrumb-item'><a href='{% url "sales-order-index" %}'>{% trans "Sales Orders" %}</a></li>
 <li class="breadcrumb-item active" aria-current="page"><a href='{% url "so-detail" order.id %}'>{{ order }}</a></li>
-{% endblock %}
+{% endblock breadcrumbs %}
 
 {% block thumbnail %}
 <img class='part-thumb'
@@ -22,11 +22,11 @@ src="{{ order.customer.image.url }}"
 src="{% static 'img/blank_image.png' %}"
 {% endif %}
 />
-{% endblock %}
+{% endblock thumbnail %}
 
 {% block heading %}
 {% trans "Sales Order" %} {{ order.reference }}
-{% endblock %}
+{% endblock heading %}
 
 {% block actions %}
 {% if user.is_staff and roles.sales_order.change %}
@@ -134,7 +134,7 @@ src="{% static 'img/blank_image.png' %}"
     {% endif %}
 </div>
 
-{% endblock %}
+{% endblock details %}
 
 {% block details_right %}
 <table class='table table-striped table-condensed'>
@@ -238,7 +238,7 @@ src="{% static 'img/blank_image.png' %}"
         </td>
     </tr>
 </table>
-{% endblock %}
+{% endblock details_right %}
 
 {% block js_ready %}
 {{ block.super }}
@@ -304,7 +304,7 @@ $('#print-order-report').click(function() {
 $('#show-qr-code').click(function() {
     showQRDialog(
         '{% trans "Sales Order QR Code" %}',
-        '{"salesorder": {{ order.pk }}}'
+        '{"salesorder": {{ order.pk }} }'
     );
 });
 
@@ -332,4 +332,4 @@ $('#export-order').click(function() {
     exportOrder('{% url "so-export" order.id %}');
 });
 
-{% endblock %}
+{% endblock js_ready %}
