--- a/InvenTree/templates/InvenTree/search.html
+++ b/InvenTree/templates/InvenTree/search.html
@@ -6,10 +6,10 @@
 
 {% block page_title %}
 {% inventree_title %} | {% trans "Search Results" %}
-{% endblock %}
+{% endblock page_title %}
 
 {% block breadcrumb_list %}
-{% endblock %}
+{% endblock breadcrumb_list %}
 
 {% block content %}
 
@@ -22,7 +22,7 @@
 <div id='detail-panels'>
 </div>
 
-{% endblock %}
+{% endblock content %}
 
 {% block js_ready %}
 {{ block.super }}
@@ -236,4 +236,4 @@
         }
     );
 
-{% endblock %}
+{% endblock js_ready %}
